MDEV-30690: Server crashed on function JSON_SCHEMA_VALID with incorrect input json schema

Analysis: In case of syntax error while scanning json schema, true is
returned inspite of it being wanring and not error.
Fix: return true instead of false.