sql/json_schema.cc
@@ -392,7 +392,7 @@ bool Json_schema_type::handle_keyword(THD *thd, json_engine_t *je,
         return true;
       json_assign_type(&type, je);
     }
-    return false;
+    return je->s.error ? true : false;
   }
   else if (je->value_type == JSON_VALUE_STRING)
   {
@@ -591,7 +591,7 @@ bool Json_schema_enum::handle_keyword(THD *thd, json_engine_t *je,
         }
       }
     }
-    return false;
+    return je->s.error ? true : false;
   }
   else
   {
@@ -1595,7 +1595,7 @@ bool Json_schema_required::handle_keyword(THD *thd, json_engine_t *je,
       this->required_properties.push_back(str, thd->mem_root);
     }
   }
-  return false;
+  return je->s.error ? true : false;
 }
 
 bool Json_schema_dependent_required::validate(const json_engine_t *je,
@@ -1758,7 +1758,7 @@ bool Json_schema_dependent_required::handle_keyword(THD *thd, json_engine_t *je,
     my_error(ER_JSON_INVALID_VALUE_FOR_KEYWORD, MYF(0), "dependentRequired");
     return true;
   }
-  return false;
+  return je->s.error ? true : false;
 }
 
 bool Json_schema_property_names::validate(const json_engine_t *je,
@@ -2120,7 +2120,7 @@ bool Json_schema_properties::handle_keyword(THD *thd, json_engine_t *je,
       }
     }
   }
-  return false;
+  return je->s.error ? true : false;
 }
 
 bool Json_schema_pattern_properties::
@@ -2806,7 +2806,7 @@ bool create_object_and_handle_keyword(THD *thd, json_engine_t *je,
   if (add_schema_interdependence(thd, &temporary_list, keyword_list))
     return true;
 
-  return false;
+  return je->s.error ? true : false;
 }
 
 uchar* get_key_name_for_property(const char *key_name, size_t *length,
